--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ serde = { version = "1.0.171", features = ["derive"] }
 serde_json = "1.0.103"
 structopt = { version = "0.3.26", features = ["color"] }
 thiserror = "1.0.43"
-time = { version = "0.3.23", features = ["macros"] }
+time = { version = "0.3.23", features = ["macros", "formatting", "local-offset"] }
 toml = "0.7.6"
 urlencoding = "2.1.2"
 xmltree = "0.10.3"
