--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0.72"
 atty = "0.2.14"
 directories = "5.0.1"
 env_logger = { version = "0.10.0", features = ["color"] }
+humantime = "2.1.0"
 log = "0.4.19"
 md5 = "0.7.0"
 reqwest = { version = "0.11.18", features = ["json", "blocking"] }
