--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,7 @@ time = { version = "0.3.23", features = ["macros", "formatting", "local-offset"]
 toml = "0.7.6"
 urlencoding = "2.1.2"
 xmltree = "0.10.3"
+
+[dev-dependencies]
+httpmock = { version = "0.6.8", features = ["env_logger"], default-features = false }
+test-log = "0.2.12"
