--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - id: setVariables
         run: |
-          echo 'output=unneeded' >> $GITHUB_OUTPUT
+          echo "output=${GITHUB_REPOSITORY#*/}" >> $GITHUB_OUTPUT
 
   artifacts:
     name: Publish target ${{ matrix.target }}
