--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,3 +73,23 @@ jobs:
         with:
           command: clippy
           args: -- -D warnings
+
+  musl:
+    name: Build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v3
+
+      - name: Install stable toolchain
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: stable
+          targets: x86_64-unknown-linux-musl
+
+      - name: Install cross
+        run: cargo install cross
+
+      - name: Build artifact
+        run: cross build --release --target=x86_64-unknown-linux-musl
+
