--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,16 +33,13 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install stable toolchain
-      uses: actions-rs/toolchain@v1
+      uses: dtolnay/rust-toolchain@stable
       with:
-        profile: minimal
-        toolchain: stable
-        override: true
         target: ${{ matrix.target }}
 
     - name: Install dependencies
       if: matrix.target == 'x86_64-unknown-linux-musl'
-      run: sudo apt-get install musl-tools libssl-dev
+      run: sudo apt-get install musl-tools musl-dev libssl-dev perl make
 
     - name: Build artifact
       run: cargo build --release --target=${{ matrix.target }}
@@ -83,15 +80,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
+        uses: dtolnay/rust-toolchain@stable
 
       - name: Run cargo publish
-        uses: actions-rs/cargo@v1
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        with:
-          command: publish
+        run: cargo publish
