--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.72"
 atty = "0.2.14"
+clap = { version = "4.4.13", features = ["derive"] }
 directories = "5.0.1"
 env_logger = { version = "0.10.0", features = ["color"] }
 humantime = "2.1.0"
@@ -16,7 +17,6 @@ md5 = "0.7.0"
 reqwest = { version = "0.11.18", features = ["json", "blocking"] }
 serde = { version = "1.0.171", features = ["derive"] }
 serde_json = "1.0.103"
-structopt = { version = "0.3.26", features = ["color"] }
 thiserror = "1.0.43"
 time = { version = "0.3.23", features = ["macros", "formatting", "local-offset"] }
 toml = "0.7.6"
